--- a/Project/Basic_CSS_Demo_1.html
+++ b/Project/Basic_CSS_Demo_1.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Basic HTML Template</title>
+        <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
         <link rel="stylesheet" href="./css/Basic_Style.css">
 
     </head>
