--- a/Project/Correction homework.html
+++ b/Project/Correction homework.html
@@ -5,8 +5,11 @@
         <Title> This is the Title </title>
     </head>
 
-<body style="background-color:light blue;">
-
+<style>
+body {
+    background-color: lightblue;
+}
+</style>
 <font-color:"darkblue">
 
 <h1 style="color:blue;">This is the Heading 1</h1>
@@ -15,15 +18,15 @@
 
 <p><b>I am a bold student of The Tech Academy. </b></p>
 
-<p><a href="learncodinganywhere.com/">This is The Tech Academy's website.</a></p>
+<p><a href="https://www.learncodinganywhere.com/">This is The Tech Academy's website.</a></p>
 
-<img src="https://www.learncodinganywhere.com/images/tech_logo/The%20Tech%20Academy%20Logo.png" alt="The Tech Academy Logo" width="(1200px)"; heigh="(400px)";>
+<img src="https://www.learncodinganywhere.com/images/tech_logo/The%20Tech%20Academy%20Logo.png" style="border:red; border-width:2px; border-style:dashed;" alt="The Tech Academy Logo" width="600px"; height="300px";>
 
 
 
-<h3><centered>Have you seen The Tech Academy's Student Orientation video?</centered></h3>
+<h3 style="text-align:center">Have you seen The Tech Academy's Student Orientation video?</h3>
 
-<iframe width="560" height="315" src=”https://ttamediaservices-uswe.streaming.media.azure.net/04ce32f6-b9fa-4e02-8c47-3e5632d92a41/html_intro_final.mp4” alt="Video" frameborder="0" allowfullscreen></iframe>
+<iframe width="560px" height="315px" src="https://ttamediaservices-uswe.streaming.media.azure.net/04ce32f6-b9fa-4e02-8c47-3e5632d92a41/html_intro_final.mp4" frameborder=0 allowfullscreen></iframe>
 </body>
 
 </html>
